--- a/www/question.html
+++ b/www/question.html
@@ -19,7 +19,7 @@
   <script type="text/javascript">
   </script>
   <script type="text/javascript">
-    const host = "https://ec2-35-168-150-155.compute-1.amazonaws.com:3000"
+    const host = "https://your-host-name:3000"
     const qurl = host + "/api/smartquora.question.Question/";
     const faafgqurl = host + "/api/queries/FindAllAnswersForGivenQuestion?question_id=resource%3Asmartquora.question.Question%23";
     const voteurl = host + "/api/smartquora.answer.VoteAnswer";
@@ -34,7 +34,7 @@
     const createquestionurl = host + "/api/smartquora.question.CreateQuestion";
     var identityMap = {};
 
-    var ws = new WebSocket('wss://ec2-35-168-150-155.compute-1.amazonaws.com:3000');
+    var ws = new WebSocket('wss://your-host-name:3000');
     ws.onerror = function(event) {
       showErrorAlert("Error received from WebSocket. See Web Console for more details.");
       console.log('-------------- Websocket Error ------------------------');
