--- a/www/question.html
+++ b/www/question.html
@@ -21,7 +21,8 @@
   <script type="text/javascript">
     const host = "https://your-host-name:3000"
     const qurl = host + "/api/smartquora.question.Question/";
-    const faafgqurl = host + "/api/queries/FindAllAnswersForGivenQuestion?question_id=resource%3Asmartquora.question.Question%23";
+    //const faafgqurl = host + "/api/queries/FindAllAnswersForGivenQuestion?question_id=resource%3Asmartquora.question.Question%23";
+    const faafgqurl = host + "/api/queries/FindAllAnswersForGivenQuestion?question_id=";
     const voteurl = host + "/api/smartquora.answer.VoteAnswer";
     const createanswerurl = host + "/api/smartquora.answer.CreateAnswer";
     const pingurl = host + "/api/system/ping";
