--- a/www/websocket-test.html
+++ b/www/websocket-test.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-<h1 class="display-6 text-center my-4 bg-dark text-light p-3">Grants Management - Event Listener</h1>
+<h1 class="display-6 text-center my-4 bg-dark text-light p-3">Smart Quora - Event Listener</h1>
 <div class="card">
 	<h2 class="display-5 text-center my-4">Message: </h2>
             <div class="card-body" id='message'>
