--- a/www/websocket-test.html
+++ b/www/websocket-test.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Grants Mgmt Dev WS Messages</title>
+<title>Smart Quora Web Socket Messages</title>
 </head>
 <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
 <body>
